--- a/page/work/bounty/index.axml
+++ b/page/work/bounty/index.axml
@@ -13,27 +13,36 @@
     </view>
   </view>
   </view> -->
-  <view class="like-title"><text>提示信息，点击下面的条目选择接受该任务</text></view>
   <list className="list" a:if="{{items.length}}">
-    <block a:for="{{items}}" class="list-block">
-      <list-item className="list-item" key="item-{{index}}" index="{{index}}" last="{{index === (items.length - 1)}}" arrow="{{false}}" align="{{item.align}}" onClick="onItemClick" multipleLine="{{true}}" wrap="{{true}}">
+    <block a:for="{{items}}">
+      <list-item className="list-item" key="item-{{index}}" index="{{index}}" last="{{index === (items.length - 1)}}" arrow="{{false}}" align="{{item.align}}" multipleLine="{{true}}" wrap="{{true}}">
         <text class="name">{{item.title}}        
         </text>
         <view class="brief">
           <view class="brief-title">{{item.content}}          
           </view>
           <view class="brief-bottom">
-            <text class="brief-bottom-left">{{item.sqTime}}
+            <text class="brief-bottom-left">限制人数：{{item.peopleNum}}
             </text>
             <text class="brief-bottom-right">{{item.status == '0' ? '发布中' : (item.status == '1' ? '已完成' : '未完成')}}
             </text>
           </view>
-          
         </view>
         <view slot="extra" class="extra">{{item.taskIntegral>0 ? '+' : ''}}{{item.taskIntegral}}                
         </view>
       </list-item>
-      <view class="brief-users" onTap="toUsers">users
+      <view class="content">
+          <view class="content-item people" a:if="{{users.length}}">
+              <text class="text">他们已经接受了该任务</text><text class="number"></text>
+          </view>
+          <view class="content-item change" onTap="change" a:if="{{!item.commit}}" data-index="{{index}}">
+              <text class="text">选择接受这项任务</text>
+              <text class="right-arrow"></text>
+          </view>
+          <view class="content-item change" onTap="commit" a:else data-index="{{index}}">
+              <text class="text">提交完成这项任务</text>
+              <text class="right-arrow"></text>
+          </view>
       </view>
     </block>
   </list>
